[gd_scene format=3 uid="uid://b0q16h4f3kgjs"]

[ext_resource type="Script" uid="uid://5pnj5ugav8ej" path="res://Code/menu.gd" id="1_nhmg3"]
[ext_resource type="FontFile" uid="uid://ffmfhysreg3g" path="res://Assets/Fonts/PixelifySans-Regular.ttf" id="2_t1b1y"]
[ext_resource type="FontFile" uid="uid://dxw2m84e4kd4a" path="res://Assets/Fonts/PixelifySans-Medium.ttf" id="4_ugp1d"]

[sub_resource type="Animation" id="Animation_wuk0b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t1b1y"]
resource_name = "fade_in"
length = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.33),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tjcm1"]
_data = {
&"RESET": SubResource("Animation_wuk0b"),
&"fade_in": SubResource("Animation_t1b1y")
}

[node name="Menu" type="Control" unique_id=847744295]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhmg3")

[node name="Title_V2" type="Label" parent="." unique_id=1097574326]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_top = 150.0
offset_right = 384.0
offset_bottom = 173.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_t1b1y")
theme_override_font_sizes/font_size = 155
text = "Game of Life"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="." unique_id=385729710]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -96.5
offset_right = 129.0
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
metadata/_edit_group_ = true

[node name="Start_btn" type="Button" parent="ButtonContainer" unique_id=1817985804]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t1b1y")
theme_override_font_sizes/font_size = 45
text = "Start"

[node name="Settings_btn" type="Button" parent="ButtonContainer" unique_id=1265896787]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t1b1y")
theme_override_font_sizes/font_size = 45
text = "Settings"

[node name="Quit_btn" type="Button" parent="ButtonContainer" unique_id=1634235729]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t1b1y")
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="Credits" type="Label" parent="." unique_id=727068427]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ugp1d")
text = "Von Lennox Murg"

[node name="MenuPlayer" type="AnimationPlayer" parent="." unique_id=2018544336]
libraries/ = SubResource("AnimationLibrary_tjcm1")

[connection signal="pressed" from="ButtonContainer/Start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="ButtonContainer/Settings_btn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="ButtonContainer/Quit_btn" to="." method="_on_quit_btn_pressed"]
